<?xml version="1.0" encoding="utf-8"?>
<layout>

    <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".view.activities.MainActivity">

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/text_input_layout_first_name"
            android:layout_width="match_parent"
            android:layout_height="@dimen/d56"
            android:layout_margin="@dimen/d12"
            app:layout_constraintTop_toTopOf="parent">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/text_input_edit_first_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:digits="@string/allowed_characters"
                android:hint="@string/text_input_hint_first_name"
                android:maxLines="1" />

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/text_input_layout_last_name"
            android:layout_width="match_parent"
            android:layout_height="@dimen/d56"
            android:layout_margin="@dimen/d12"
            app:layout_constraintTop_toBottomOf="@id/text_input_layout_first_name">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/text_input_edit_last_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:digits="@string/allowed_characters"
                android:hint="@string/text_input_hint_last_name"
                android:inputType="text"
                android:maxLines="1" />

        </com.google.android.material.textfield.TextInputLayout>

        <Spinner
            android:id="@+id/spinner_country"
            android:layout_width="match_parent"
            android:layout_height="@dimen/d56"
            android:layout_marginHorizontal="@dimen/d12"
            android:layout_marginTop="@dimen/d48"
            android:spinnerMode="dropdown"
            app:layout_constraintTop_toBottomOf="@id/text_input_layout_last_name" />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/text_input_layout_phone"
            android:layout_width="match_parent"
            android:layout_height="@dimen/d56"
            android:layout_marginHorizontal="@dimen/d12"
            android:layout_marginTop="@dimen/d32"
            app:layout_constraintTop_toBottomOf="@id/spinner_country">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/textinput_edit_phone"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/text_input_hint_phone_number"
                android:inputType="phone"
                android:maxLines="1"/>

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/text_input_layout_ammount"
            android:layout_width="match_parent"
            android:layout_height="@dimen/d56"
            android:layout_marginHorizontal="@dimen/d12"
            android:layout_marginTop="@dimen/d32"
            app:layout_constraintTop_toBottomOf="@id/text_input_layout_phone">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/textinput_edit_ammount"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:digits="01"
                android:hint="@string/text_input_hint_ammunt"
                android:inputType="number"
                android:maxLines="1" />

        </com.google.android.material.textfield.TextInputLayout>

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/button_send_money"
            style="@style/Widget.PenguinPay.Button"
            android:text="@string/button_send_text"
            app:layout_constraintBottom_toBottomOf="parent"
            tools:ignore="MissingConstraints" />

        <ProgressBar
            android:id="@+id/progress_bar"
            style="?android:attr/progressBarStyleLarge"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:background="@color/black_80"
            android:elevation="@dimen/d12"
            android:visibility="gone"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />
    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>